--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^5.3.0",
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.6.5",
+    "astro": "^2.7.0",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.1",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.2"
   }
 }
