--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "feedback-website",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,6 +15,7 @@
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.7.0",
     "dotenv": "^16.3.1",
+    "js-yaml": "^4.1.0",
     "pg": "^8.11.1",
     "tailwindcss": "^3.0.24"
   },
