--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "lint": "eslint . --max-warnings 0 && prettier --check \"**/*.{ts,astro,json,css,js,mjs,cjs,md}\"",
+    "format": "eslint --fix . && prettier --write \"**/*.{ts,astro,json,css,js,mjs,cjs,md}\"",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -14,12 +16,17 @@
     "@astrojs/node": "^5.3.0",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.7.0",
-    "dotenv": "^16.3.1",
     "js-yaml": "^4.1.0",
     "pg": "^8.11.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.2"
+    "@types/js-yaml": "^4.0.5",
+    "@types/pg": "^8.10.2",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-astro": "^0.27.2",
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
