--- a/config.yml
+++ b/config.yml
@@ -5,10 +5,10 @@
 postgres:
   database: feedback-db
   user: feedback-user
-  password: feedback-password
+  passkey: feedback-password
   host: localhost
   port: 5432
 
 admin:
-  name: admin
-  password: CHANGE_ME_OR_ELSE
+  username: admin
+  passkey: CHANGE_ME_OR_ELSE
